--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
   "builds": [
     {
       "src": "./index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "env": {
+        "VITE_API_PRODUCTO": "https://vermont-restaurant.vercel.app/api/productos",
+        "VITE_API_USUARIO": "https://vermont-restaurant.vercel.app/api/usuario"
+      }
     }
   ],
   "routes": [
